# openmediaplayer

./: CMakeLists.txt  README.md  openmediaplayer.pro
cmake/: FindCcache.cmake
debian/: changelog  control  rules
lyrics/: lyrics.pro
lyrics/azlyrics/: azlyricsplugin.cpp  azlyricsplugin.h
lyrics/chartlyrics/: chartlyricsplugin.cpp  chartlyricsplugin.h
lyrics/darklyrics/: darklyricsplugin.cpp  darklyricsplugin.h
lyrics/lyricsdb/: lyricsdbplugin.cpp  lyricsdbplugin.h
lyrics/lyricwiki/: lyricwikiplugin.cpp  lyricwikiplugin.h
lyrics/maelyrica/: maelyricaplugin.cpp  maelyricaplugin.h
lyrics/omplegacy/: omplegacyplugin.cpp  omplegacyplugin.h
lyrics/sonata/: sonataplugin.cpp  sonataplugin.h
player/: CMakeLists.txt  aboutwindow.cpp  basewindow.cpp  basewindow.h  bookmarkdialog.h  browserwindow.cpp  browserwindow.h  coverpicker.cpp  coverpicker.h  cqgraphicsview.cpp  cqgraphicsview.h  currentplaylistmanager.cpp  currentplaylistmanager.h  fmtxdialog.h  fmtxinterface.cpp  fmtxinterface.h  frequencypickdialog.cpp  frequencypickdialog.h  frequencypickselector.cpp  frequencypickselector.h  internetradiowindow.cpp  internetradiowindow.h  lyricseditdialog.cpp  lyricseditdialog.h  lyricsmanager.cpp  lyricsmanager.h  lyricsprovidersdialog.cpp  lyricsprovidersdialog.h  lyricssearchdialog.h  maemo5deviceevents.cpp  maemo5deviceevents.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  metadatadialog.cpp  metadatadialog.h  metadatawatcher.cpp  metadatawatcher.h  missioncontrol.h  (+48 more)
player/delegates/: artistlistitemdelegate.h  maindelegate.h  mediawithicondelegate.h  playlistdelegate.h  providerlistitemdelegate.h  shufflebuttondelegate.h  songlistitemdelegate.h  thumbnailitemdelegate.h
player/lyrics/: abstractlyricsprovider.h
player/lyrics/azlyrics/: azlyrics.pro  azlyricsplugin.cpp  azlyricsplugin.h
player/lyrics/chartlyrics/: chartlyricsplugin.cpp  chartlyricsplugin.h
player/lyrics/darklyrics/: darklyricsplugin.cpp  darklyricsplugin.h
player/lyrics/lyricsdb/: lyricsdbplugin.cpp  lyricsdbplugin.h
player/lyrics/lyricwiki/: lyricwikiplugin.cpp  lyricwikiplugin.h
player/lyrics/maelyrica/: maelyricaplugin.cpp
player/lyrics/omplegacy/: omplegacyplugin.cpp
player/lyrics/sonata/: sonataplugin.cpp
player/mafw/: currentplaylistadapter.cpp  currentplaylistadapter.h  mafwplaylistadapter.cpp  mafwplaylistadapter.h  mafwplaylistmanageradapter.cpp  mafwplaylistmanageradapter.h  mafwregistryadapter.cpp  mafwregistryadapter.h  mafwrendereradapter.cpp  mafwrendereradapter.h  mafwsourceadapter.cpp  mafwsourceadapter.h  mafwutils.cpp  mafwutils.h
player/qml_carview/: Button.qml  MetadataText.qml  Playlist.qml  Slider.qml  SongView.qml  carview.qml
player/qml_entertainmentview/: Slider.qml  entertainmentview.qml
